Fix problems after teacher review

--- a/numpy_task_rus_.ipynb
+++ b/numpy_task_rus_.ipynb
@@ -14,8 +14,8 @@
    "metadata": {
     "id": "Er1A02n9LrR7",
     "ExecuteTime": {
-     "end_time": "2024-05-27T20:32:33.919653Z",
-     "start_time": "2024-05-27T20:32:33.913874Z"
+     "end_time": "2024-05-28T08:44:14.097639Z",
+     "start_time": "2024-05-28T08:44:13.719461Z"
     }
    },
    "source": [
@@ -45,7 +45,7 @@
       "    found: true\n",
       "    include directory: unknown\n",
       "    lib directory: unknown\n",
-      "    name: dep2270588361616\n",
+      "    name: dep3179274605568\n",
       "    openblas configuration: unknown\n",
       "    pc file directory: unknown\n",
       "    version: 1.26.4\n",
@@ -77,8 +77,8 @@
       "    family: x86_64\n",
       "    system: windows\n",
       "Python Information:\n",
-      "  path: C:\\Users\\runneradmin\\AppData\\Local\\Temp\\cibw-run-j442zwj6\\cp311-win_amd64\\build\\venv\\Scripts\\python.exe\n",
-      "  version: '3.11'\n",
+      "  path: C:\\Users\\runneradmin\\AppData\\Local\\Temp\\cibw-run-g7slqwov\\cp312-win_amd64\\build\\venv\\Scripts\\python.exe\n",
+      "  version: '3.12'\n",
       "SIMD Extensions:\n",
       "  baseline:\n",
       "  - SSE\n",
@@ -104,7 +104,7 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -747,26 +747,36 @@
    "metadata": {
     "id": "2WI9M2bgLrSD",
     "ExecuteTime": {
-     "end_time": "2024-05-27T21:53:59.392009Z",
-     "start_time": "2024-05-27T21:53:59.387370Z"
+     "end_time": "2024-05-28T08:55:37.709135Z",
+     "start_time": "2024-05-28T08:55:37.705050Z"
     }
    },
-   "source": "np.resize(np.arange(0, 13), (3, 4))",
+   "source": [
+    "t = np.resize(np.arange(0, 13), (3, 4))\n",
+    "for x in np.nditer(t):\n",
+    "    print(x)"
+   ],
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[ 0,  1,  2,  3],\n",
-       "       [ 4,  5,  6,  7],\n",
-       "       [ 8,  9, 10, 11]])"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n"
+     ]
     }
    ],
-   "execution_count": 78
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -916,8 +926,8 @@
    "metadata": {
     "id": "SGbT420dLrSF",
     "ExecuteTime": {
-     "end_time": "2024-05-27T21:51:54.470097Z",
-     "start_time": "2024-05-27T21:51:54.465097Z"
+     "end_time": "2024-05-28T08:57:47.576424Z",
+     "start_time": "2024-05-28T08:57:47.571077Z"
     }
    },
    "source": "np.resize(np.arange(10, 22), (3, 4))",
@@ -930,12 +940,12 @@
        "       [18, 19, 20, 21]])"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 76
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -1518,36 +1528,34 @@
    "metadata": {
     "id": "HovBggDvLrSJ",
     "ExecuteTime": {
-     "end_time": "2024-05-28T07:19:23.834410Z",
-     "start_time": "2024-05-28T07:19:23.830590Z"
+     "end_time": "2024-05-28T09:09:05.698047Z",
+     "start_time": "2024-05-28T09:09:05.690478Z"
     }
    },
    "source": [
-    "arr = np.array([1, 2, 3], dtype=np.int64)\n",
-    "arr_list = arr.tolist()\n",
-    "print(arr, \" \", type(arr))\n",
-    "print(arr_list, \" \", type(arr_list))"
+    "x = np.float32(1)\n",
+    "y = x.item()\n",
+    "print(type(x))\n",
+    "print(type(y))"
    ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 2 3]   <class 'numpy.ndarray'>\n",
-      "[1, 2, 3]   <class 'list'>\n"
+      "<class 'numpy.float32'>\n",
+      "<class 'float'>\n"
      ]
     }
    ],
-   "execution_count": 111
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "id": "r9Z4ejnQLrSK"
    },
-   "source": [
-    "42. Напишите программу `NumPy` для суммирования элементов матрицы. Если элемент в матрице равен `0`, мы не будем добавлять элемент ниже этого элемента."
-   ]
+   "source": "42. Напишите программу `NumPy` для суммирования элементов матрицы. Если элемент в матрице равен `0`, мы не будем добавлять элемент ниже этого элемента."
   },
   {
    "cell_type": "code",
