--- a/pandas_dataframe_task_.ipynb
+++ b/pandas_dataframe_task_.ipynb
@@ -9,12 +9,12 @@
    "metadata": {
     "id": "E-b-T3TSZG-3",
     "ExecuteTime": {
-     "end_time": "2024-05-28T07:46:08.116203Z",
-     "start_time": "2024-05-28T07:46:07.767394Z"
+     "end_time": "2024-05-28T09:26:28.031777Z",
+     "start_time": "2024-05-28T09:26:27.396224Z"
     }
    },
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "cell_type": "code",
@@ -69,8 +69,8 @@
     "id": "6BLjAeg7Y4Q4",
     "outputId": "887ad577-7db7-495b-d258-9ef0bbe8ed3e",
     "ExecuteTime": {
-     "end_time": "2024-05-28T07:46:08.130838Z",
-     "start_time": "2024-05-28T07:46:08.120431Z"
+     "end_time": "2024-05-28T09:26:40.917593Z",
+     "start_time": "2024-05-28T09:26:40.894635Z"
     }
    },
    "source": [
@@ -1127,8 +1127,8 @@
     },
     "outputId": "f8c7953f-e08f-4feb-99c3-eca6da736ca7",
     "ExecuteTime": {
-     "end_time": "2024-05-28T07:46:08.214764Z",
-     "start_time": "2024-05-28T07:46:08.204762Z"
+     "end_time": "2024-05-28T09:32:07.720519Z",
+     "start_time": "2024-05-28T09:32:07.709100Z"
     }
    },
    "source": [
@@ -1145,69 +1145,25 @@
     {
      "data": {
       "text/plain": [
-       "        name  score  attempts qualify\n",
-       "c  Katherine   16.5         2     yes\n",
-       "f    Michael   20.0         3     yes\n",
-       "j      Jonas   19.0         1     yes"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>score</th>\n",
-       "      <th>attempts</th>\n",
-       "      <th>qualify</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>c</th>\n",
-       "      <td>Katherine</td>\n",
-       "      <td>16.5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>f</th>\n",
-       "      <td>Michael</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>j</th>\n",
-       "      <td>Jonas</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>yes</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
+       "a    False\n",
+       "b    False\n",
+       "c     True\n",
+       "d    False\n",
+       "e    False\n",
+       "f     True\n",
+       "g    False\n",
+       "h    False\n",
+       "i    False\n",
+       "j     True\n",
+       "Name: score, dtype: bool"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 12
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
